test/trivial/deitz/test_imag_coerce2.chpl
var i: imag = 1;
writeln(i);
